remove warnings on gradle test task